@@ -54,6 +54,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 22647) Add category details in search results.
 * (bug 23276) Add hook to Special:NewPages to modify query
 * Add accesskey 's' and tooltip to 'Save' button at Special:Preferences
+* (bug 20186) Allow filtering Special:Contributions for RevisionDeleted edits
 
 === Bug fixes in 1.17 ===
 * (bug 17560) Half-broken deletion moved image files to deletion archive
